tweak styles, don't print sidebar, fix scrollbar align issue

--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -55,6 +55,7 @@ html {
   height: 100%;
   scroll-padding-top: 20px;
   overflow-y: auto;
+  scrollbar-gutter: stable;
 }
 
 body {
@@ -98,6 +99,7 @@ header a {
 
 #logo img {
   height: 1.6em;
+  width: 1.6em;
 }
 
 nav {
@@ -139,7 +141,7 @@ nav li {
 #sidebar {
   grid-area: sidebar;
   border-left: 2px solid #eee;
-  padding: 4px 0 4px 24px;
+  padding: 4px 0 4px 20px;
   height: min-content;
   font-size: 0.9rem;
   font-weight: bold;
@@ -178,15 +180,12 @@ nav li {
 
 #sidebar li:has(a[href^="#"])::before {
   content: "#";
+  font-size: 0.8rem;
+  line-height: 1.3;
 }
 
 #sidebar li a {
   color: inherit;
-}
-
-#sidebar code {
-  padding: 0;
-  background-color: transparent;
 }
 
 .page-links {
@@ -456,8 +455,8 @@ kbd {
 
 .tag {
   font-weight: bold;
-  font-size: 0.9em;
-  padding: 1px 6px 2px;
+  font-size: 0.8em;
+  padding: 1px 4px 2px;
   margin-inline: 1px;
   border-radius: 3px;
   cursor: help;
@@ -587,16 +586,16 @@ kbd {
     display: block;
   }
 
+  #sidebar {
+    display: none;
+  }
+
   article > * {
     margin-bottom: 30px !important;
   }
 
   pre code {
     white-space: pre-wrap;
-  }
-
-  #back {
-    display: none;
   }
 }
 
